apps/overlays/zion/homeassistant/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homeassistant-auth-middleware
  namespace: homeassistant
spec:
  forwardAuth:
    # This address should point to the cluster endpoint provided by the kubernetes service, not the Ingress.
    address: http://auth-traefik-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-entitlements
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - X-authentik-jwt
        - X-authentik-meta-jwks
        - X-authentik-meta-outpost
        - X-authentik-meta-provider
        - X-authentik-meta-app
        - X-authentik-meta-version
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homeassistant-ws-headers
  namespace: homeassistant
spec:
  headers:
    customRequestHeaders:
      Connection: Upgrade
      Upgrade: websocket
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homeassistant-cors-middleware
  namespace: homeassistant
spec:
  headers:
    accessControlAllowOriginList:
      - "https://homeassistant.milanchis.com"
    accessControlAllowMethods:
      - GET
      - POST
      - OPTIONS
      - PUT
      - DELETE
    accessControlAllowHeaders:
      - Authorization
      - Content-Type
      - X-Requested-With
      - Origin
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
