apps/overlays/zion/homeassistant/ingress.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: auth-traefik-outpost
#   namespace: homeassistant
# spec:
#   type: ExternalName
#   externalName: auth-traefik-outpost.authentik.svc.cluster.local
#   ports:
#     - port: 9000
#       targetPort: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant.milanchis.com`) && PathPrefix(`/api/websocket`)  # WebSocket route
      kind: Rule
      priority: 5
      services:
        - name: homeassistant
          port: 8123
      middlewares:
        - name: zion-homeassistant-ws-headers
    - match: Host(`homeassistant.milanchis.com`) && PathPrefix(`/`)
      kind: Rule
      priority: 10
      services:
        - name: zion-homeassistant
          port: 80
          sticky:
            cookie:
              name: homeassistant-stickiness
              secure: true
              httpOnly: true
              sameSite: none
      # middlewares:
        # - name: zion-homeassistant-auth-middleware
        # - name: zion-homeassistant-cors-middleware
    # - match: Host(`homeassistant.milanchis.com`) && PathPrefix(`/outpost.goauthentik.io/`)
    #   kind: Rule
    #   priority: 15
    #   services:
    #     - name: zion-auth-traefik-outpost
    #       port: 9000

  tls:
    secretName: homeassistant-certificate-secret
